# simple_test_models

./: Cargo.toml  README.md  clippy.txt  crates.js  index.html  index.md  search-index.js  settings.html  source-files.js
.github/workflows/: build.yaml  coverage.yaml  docs.yaml  rust.yml  tests.yaml
implementors/core/default/: trait.Default.js
implementors/core/marker/: trait.Freeze.js  trait.Send.js  trait.Sync.js  trait.Unpin.js
implementors/core/panic/unwind_safe/: trait.RefUnwindSafe.js  trait.UnwindSafe.js
simple_test_models/: all.html  enum.TestMat.html  fn.add_heater.html  fn.add_luminaire.html  fn.get_single_zone_test_building.html  index.html  sidebar-items.js  struct.SingleZoneTestBuildingOptions.html  type.Float.html
src/: lib.rs
src/simple_test_models/: lib.rs.html
