[package]
name = "simple_test_models"
version = "0.1.0"
authors = ["German Molina <germolinal@gmail.com>"]
edition = "2018"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
geometry3d = {git = "https://github.com/SIMPLE-BuildingSimulation/geometry3d.git"}
schedule = { git = "https://github.com/SIMPLE-BuildingSimulation/schedule.git" }
simple_model = { git = "https://github.com/SIMPLE-BuildingSimulation/simple_model.git" }



